Added Almond Info

--- a/_posts/2017-03-20-almond.md
+++ b/_posts/2017-03-20-almond.md
@@ -1,6 +1,6 @@
 ---
 title: Almond
-subtitle: "-"
-site-url: https://example.com
-thumbnail: untited.png
+subtitle: "In-person On-demand Tutoring"
+site-url: https://getalmond.com
+thumbnail: almond.png
 ---
