--- a/_posts/2017-03-20-glimpse.md
+++ b/_posts/2017-03-20-glimpse.md
@@ -1,7 +1,7 @@
 ---
 title: Glimpse
-subtitle: "-"
-site-url: https://example.com
-thumbnail: untited.png
+subtitle: "A global social adventure"
+site-url: http://www.glimpse.world
+thumbnail: glimpse.png
 
 ---
