--- a/_posts/2017-03-20-furn.md
+++ b/_posts/2017-03-20-furn.md
@@ -1,7 +1,7 @@
 ---
 title: Furn
 subtitle: "On-demand buddy and truck to move furniture"
-site-url: https://furnmove.com
+site-url: http://furnmove.com
 thumbnail: furn.png
 
 ---
