--- a/_posts/2017-03-20-wisepool.md
+++ b/_posts/2017-03-20-wisepool.md
@@ -1,7 +1,7 @@
 ---
 title: WisePool
 subtitle: "Crowd-sourced Education Platform"
-site-url: https://wisepool.io
+site-url: http://wisepool.io
 thumbnail: wisepool-logo.png
 
 ---
