truncate clouby description

--- a/_posts/2017-03-20-clouby.md
+++ b/_posts/2017-03-20-clouby.md
@@ -1,6 +1,6 @@
 ---
 title: Clouby
-subtitle: "Clouby makes educational kid friendly games that kids don’t realize are educational. We strive to bring a sense of adventure and discovery to all of our users while providing parents with a sense of relief."
+subtitle: "Clouby makes educational kid friendly games that kids don’t realize are educational."
 site-url: https://www.youtube.com/watch?v=v26Nh54RQj0
 thumbnail: clouby.jpg
 
