fix ommake name

--- a/_posts/2017-03-20-ommake.md
+++ b/_posts/2017-03-20-ommake.md
@@ -1,5 +1,5 @@
 ---
-title: Omake
+title: Ommake
 subtitle: "An integrated platform for home builders and remodelers struggling with organization and scheduling."
 site-url: https://ommake.com
 thumbnail: ommake.png
