--- a/_posts/2018-03-21-Apps&Taps.md
+++ b/_posts/2018-03-21-Apps&Taps.md
@@ -1,5 +1,5 @@
 ---
-title: WisePool
+title: Apps & Taps
 subtitle: "Crowd-sourced Education Platform"
 site-url: http://wisepool.io
 thumbnail: wisepool-logo.png
