--- a/_posts/2018-03-21-Flatiron.md
+++ b/_posts/2018-03-21-Flatiron.md
@@ -1,5 +1,5 @@
 ---
-title: Stuff Sanity
+title: Flatiron
 subtitle: "Defeat your clutter and find the best deals on the stuff you want"
 site-url: https://www.stuffsanity.com
 thumbnail: stuffsanity.png
