--- a/_posts/2018-03-21-Mopsus.md
+++ b/_posts/2018-03-21-Mopsus.md
@@ -1,5 +1,5 @@
 ---
-title: Furn
+title: Mopsus
 subtitle: "On-demand buddy and truck to move furniture"
 site-url: http://furnmove.com
 thumbnail: furn.png
