--- a/_posts/2018-03-21-Apps&Taps.md
+++ b/_posts/2018-03-21-Apps&Taps.md
@@ -1,7 +1,7 @@
 ---
-title: Apps & Taps
-subtitle: "Crowd-sourced Education Platform"
-site-url: http://wisepool.io
-thumbnail: wisepool-logo.png
+title: App & Taps
+subtitle: "Minimize your search times, maximize your happy times. App & Taps."
+site-url: http://appandtaps.com/
+thumbnail: Apps&Taps.png
 
 ---
