--- a/_posts/2018-03-21-Flatiron.md
+++ b/_posts/2018-03-21-Flatiron.md
@@ -1,7 +1,7 @@
 ---
 title: Flatiron
-subtitle: "Defeat your clutter and find the best deals on the stuff you want"
-site-url: https://www.stuffsanity.com
-thumbnail: stuffsanity.png
+subtitle: "With Flatiron, authentic communication is just one tap away. Stay connected by utilizing a real-time map of your community and create experiences worth sharing"
+site-url: https://www.flatironapp.com/
+thumbnail: Flatiron.png
 
 ---
