Updating Companies Info

--- a/_posts/2018-03-21-FairPlay.md
+++ b/_posts/2018-03-21-FairPlay.md
@@ -1,7 +1,7 @@
 ---
 title: FairPlay
-subtitle: "Crowd-sourced Education Platform"
-site-url: http://wisepool.io
-thumbnail: wisepool-logo.png
+subtitle: ""
+site-url:
+thumbnail: 
 
 ---
