--- a/_posts/2018-03-21-Hearth.md
+++ b/_posts/2018-03-21-Hearth.md
@@ -1,6 +1,6 @@
 ---
 title: Hearth
-subtitle: "Crawlr is your personal guide to the best possible adventures near you! Whether it be going out with friends or planning a date night, Crawlr has your back."
-site-url: https://crawlr.tech
-thumbnail: crawlr.jpg
+subtitle: ""
+site-url:
+thumbnail: 
 ---
