--- a/_posts/2018-03-21-Quickjob.io.md
+++ b/_posts/2018-03-21-Quickjob.io.md
@@ -1,7 +1,7 @@
 ---
 title: Quickjob.io
-subtitle: "Data Driven Merchandise"
-site-url: https://shirtkarate.com
-thumbnail: shirtkarate.png
+subtitle: ""
+site-url:
+thumbnail: 
 
 ---
