Editing the timeline & Modifying the Companies List

--- a/_posts/2018-03-21-Hearth.md
+++ b/_posts/2018-03-21-Hearth.md
@@ -1,6 +1,6 @@
 ---
 title: Hearth
-subtitle: ""
-site-url:
-thumbnail: 
+subtitle: "Hearth Smart Vents monitor the temperature in each room and intelligently control the heating in your home, giving you ultimate control over your heating."
+site-url: http://hearth.systems/
+thumbnail: Hearth.png
 ---
