--- a/_posts/2018-03-21-8Artisan.md
+++ b/_posts/2018-03-21-8Artisan.md
@@ -1,7 +1,7 @@
 ---
 title: Artisan
 subtitle: "Share unique virtual objects locally with family and friends using Augmented Reality"
-site-url:
+site-url: https://artisanar.github.io/
 thumbnail: Artisan.png
 
 ---
