--- a/_posts/2018-03-21-5Resonance.md
+++ b/_posts/2018-03-21-5Resonance.md
@@ -1,7 +1,7 @@
 ---
 title: Resonance
 subtitle: ""
-site-url: www.resonator.life
+site-url: http://www.resonator.life/
 thumbnail: resonance_logo_icon.png
 
 ---
