--- a/_posts/2018-03-21-1Apps&Taps.md
+++ b/_posts/2018-03-21-1Apps&Taps.md
@@ -1,6 +1,6 @@
 ---
 title: App & Taps
-subtitle: "Minimize your search times, maximize your happy times. App & Taps.                                                                             "
+subtitle: "Minimize your search times, maximize your happy times. App & Taps. &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;   "
 site-url: http://appandtaps.com/
 thumbnail: Apps&Taps.png
 
