--- a/_posts/2018-03-21-8Artisan.md
+++ b/_posts/2018-03-21-8Artisan.md
@@ -1,6 +1,6 @@
 ---
 title: Artisan
-subtitle: "Share unique virtual objects locally with family and friends using Augmented Reality                                                           "
+subtitle: "Share unique virtual objects locally with family and friends using Augmented Reality &emsp; &emsp; &emsp &emsp; &emsp; &emsp; &emsp; &emsp; &emsp &emsp &emsp"
 site-url: https://artisanar.github.io/
 thumbnail: Artisan.png
 
