Adding a few companies

--- a/_posts/2018-03-21-8Artisan.md
+++ b/_posts/2018-03-21-8Artisan.md
@@ -1,6 +1,6 @@
 ---
 title: Artisan
-subtitle: "Share unique virtual objects locally with family and friends using Augmented Reality <br><br><br><br><br>"
+subtitle: "Share unique virtual objects locally with family and friends using Augmented Reality <br><br><br><br>"
 site-url: https://artisanar.github.io/
 thumbnail: Artisan.png
 
