--- a/_posts/2018-03-21-6aQuickjob.io.md
+++ b/_posts/2018-03-21-6aQuickjob.io.md
@@ -1,6 +1,6 @@
 ---
 title: Quickjob.io
-subtitle: "Save Time, Be Organized using the Salesforce of job applications<br><br><br><br>"
+subtitle: "Save Time, Be Organized using the Salesforce of job applications"
 site-url: http://www.quickjob.io/
 thumbnail: bluewhite_quickjob.PNG
 
