--- a/_posts/2018-03-21-5Resonance.md
+++ b/_posts/2018-03-21-5Resonance.md
@@ -1,6 +1,6 @@
 ---
 title: Resonance
-subtitle: "<br><br><br><br><br>"
+subtitle: "<br><br><br><br>"
 site-url: http://www.resonator.life/
 thumbnail: resonance_logo_icon.png
 
