--- a/_posts/2018-03-21-3Hearth.md
+++ b/_posts/2018-03-21-3Hearth.md
@@ -1,6 +1,6 @@
 ---
 title: Hearth
-subtitle: "Hearth Smart Vents monitor the temperature in each room and intelligently control the heating in your home, giving you ultimate control over your heating.<br>"
+subtitle: "Hearth Smart Vents monitor the temperature in each room and intelligently control the heating in your home, giving you ultimate control over your heating.<br><br>"
 site-url: http://hearth.systems/
 thumbnail: Hearth.png
 ---
